--- a/version-0/index.html
+++ b/version-0/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Promo N Team 3</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./styles/reset.css" class="css">
     <link rel="stylesheet" href="./styles/main.css" class="css">
 </head>
@@ -21,7 +20,7 @@
                 <li class="itemMenu"><a href="#quienesSomos" alt="quienes" title="who"><strong>Quienes
                             somos</strong></a>
                 </li>
-                <li class="itemMenu"><a href="contacto" alt="contact" title="contact"><strong>Contacto</strong></a></li>
+                <li class="itemMenu"><a href="contact" alt="contact" title="contact"><strong>Contacto</strong></a></li>
             </ul>
         </nav>
         <div class="hero">
@@ -34,19 +33,14 @@
 
 
         <section class="equipo">
-            <div class="frase-presentacion"> "Son nuestras decisiones las que muestran quienes somos realmente, más que
-                nuestras habilidades."<br>- J. K. Rowling </div>
+            <div class="frase-presentacion"> "Son nuestras decisiones las que muestran quienes somos realmente, más que nuestras habilidades."<br>- J. K. Rowling </div>
 
             <h2 class="equipo-titulo" id="team">Equipo</h2>
             <p class="equipo-parrafo">
-                La necesidad de formación es una constante, mientras que en el mundo en que vivimos es incierto, por lo
-                que hemos decidido dar un paso al frente y ser dueñas de nuestro destino. Por ello estamos deseando
-                conocer este mundo de la programación y hemos decidido
+                La necesidad de formación es una constante, mientras que en el mundo en que vivimos es incierto, por lo que hemos decidido dar un paso al frente y ser dueñas de nuestro destino. Por ello estamos deseando conocer este mundo de la programación y hemos decidido
                 apostar por una formación con ADALAB. <br> </br>
 
-                Somos un equipo recién constituido para aprender a desarrollar servicios IT, estamos aprendiendo a crear
-                soluciones integrales de alto componente tecnológico en front-end, social y humano. Sentimos pasión por
-                aprender y mejorar laboralmente.
+                Somos un equipo recién constituido para aprender a desarrollar servicios IT, estamos aprendiendo a crear soluciones integrales de alto componente tecnológico en front-end, social y humano. Sentimos pasión por aprender y mejorar laboralmente.
             </p>
 
             <div class="cuadrado"></div>
@@ -56,19 +50,14 @@
         <section class="fortalezas-debilidades">
             <h3 class="fortalezas-titulo">Fortalezas</h3>
             <p class="fortalezas-debilidades-parrafo">
-                A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las
-                principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos
-                hasta lograr nuestros objetivos. Tenemos recursos necesarios
+                A las AdaDIv’S nos define la afán de superación, perseverancia y la curiosidad que son unas de las principales fortalezas personales y laborales. Sabemos cuándo afrontar las dificultades y no paramos hasta lograr nuestros objetivos. Tenemos recursos necesarios
                 para recuperarnos de las caídas y seguir adelante.
             </p>
 
             <h3 class="debilidades-titulo">Debilidades</h3>
             <p class="fortalezas-debilidades-parrafo">
-                La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando
-                los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas
-                juntas para ayudarnos a mejorar como personas y
-                poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los
-                objetivos en comun.
+                La impaciencia puede ser un rasgo común de todas. Es una debilidad porque expresa la frustración cuando los resultados no son inmediatos cuando las cosas y el código no funciona. Pero aquí estamos todas juntas para ayudarnos a mejorar como personas y
+                poder llegar a ser buenas programadoras. Estamso trabajando en corregir este detalle y juntas lograr los objetivos en comun.
             </p>
         </section>
         <!-------------------------------------- fin equipo fortaleza y debilidades------------------------->
@@ -84,9 +73,7 @@
 
                     <h3 class="name">Paloma Arévalo </h3>
                     <div class="container-text">
-                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                            esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                         <div class="rrss-icons">
                             <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
@@ -118,9 +105,7 @@
 
                     <div class="container-text">
 
-                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                            esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                         <div class="rrss-icons">
                             <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
@@ -146,9 +131,7 @@
 
                     <h3 class="name">Gabriela Gil</h3>
                     <div class="container-text">
-                        <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se
-                            marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de
-                            resolver problemas que se presentan en su día a día. Es una luchadora.
+                        <p class="wwa-parrafo">Es paciente pero tenaz y le permite luchar por los objetivos que se marca, es persiste hasta alcanzarlo. Es observadora y esto le hace ser práctica a la hora de resolver problemas que se presentan en su día a día. Es una luchadora.
                         </p>
                         <div class="rrss-icons">
                             <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
@@ -174,9 +157,7 @@
 
                     <h3 class="name">María Molina </h3>
                     <div class="container-text">
-                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit
-                            esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab
-                            eaque nesciunt illum! Dicta cumque animi illo enim totam?
+                        <p class="wwa-parrafo"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, impedit esse asperiores blanditiis distinctio excepturi quasi ea, obcaecati, aliquam consequatur ab eaque nesciunt illum! Dicta cumque animi illo enim totam?
                         </p>
                         <div class="rrss-icons">
                             <div class="icon"><a href=""><i class="fab fa-twitter"></i></a></div>·
